[project]
name = "cua-mac"
version = "0.1.0"
description = "computer use agent for local macOS"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openai>=2.26.0",
    "pyobjc-framework-cocoa>=11.1",
    "pyobjc-framework-quartz>=11.1",
    "python-dotenv>=1.1.0",
]

[project.scripts]
cua-mac = "cua_mac.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cua_mac"]
